# interpretable_corenlp

./: LICENSE  README.md  pyproject.toml
examples/: interpretability.py  run_pos.py  run_sentence.py
interpretable_corenlp/: __init__.py  bench.py  embedding.py  eval_sbd.py  posfeats.py  sbd.py  sbd_engram.py  tagger.py
models/embedding/: W_int8.npz
models/pos/: model.npz
models/sbd/: engram.npz  sbd.npz
